Mudanças na exclusão